# agent-dev-assistence-model

./: .env.vvs  .gitignore  Dockerfile  Makefile  README.md  SETUP_GUIDE.md  activate_features.sh  claude.md  deactivate_features.sh  pyproject.toml  run_agent.py  test_adk_structure.py  test_agents.py
.claude/: settings.local.json
.claude/agents/: cli-builder.md  dev-pr.md  embeddings.md  indexer.md  orchestrator.md  policy-decider.md  rag-answerer.md  rally-planner.md  repo-ingestor.md  repo-sizer.md  retriever.md  sandbox-runner.md
.claude/commands/: build-cli.md  build-core.md  build-ingest.md  build-orchestrator.md  build-policy.md  build-rag.md  build-sizer.md  decide.md  dev.md  index.md  ingest.md  plan.md  rag.md  sandbox.md  search.md  size.md  workflow.md
.claude/hooks/: validate_io.sh
.claude/schemas/: index.schema.json  policy.schema.json  prplan.schema.json  rag.schema.json  repo_ingest.schema.json  retrieval.schema.json  sizer.schema.json  stories.schema.json
.github/workflows/: lint.yml
adam_agent/: __init__.py
configs/: app.example.yaml
docs/: ADK_INTEGRATION.md  CONFIGURATION_GUIDE.md  DEMO.md  KT_BUDDY_ROADMAP.md  VVS_ENABLE.md
scripts/: adk_dev.sh  deploy.sh  deploy_existing.py  dev.sh  provision_vvs.py  setup_vvs.sh  vvs_smoketest.py
server/: api.py  run.py
src/: __init__.py
src/adk/: graph.py
src/agents/: __init__.py  agent.py  code_exec_agent.py  codegen_stub.py  dev_pr.py  indexer.py  orchestrator.py  planner_rally.py  probe_planner.py  rag_answerer.py  rally_extender.py  rally_planner.py  repo_ingestor.py  sandbox_runner.py  task_decomposer.py
src/analysis/: __init__.py  kg_extract.py  kg_models.py  models.py  scan.py
src/core/: config.py  logging.py  policy.py  storage.py  types.py
src/models/: __init__.py  change.py
src/services/: docsgen.py  prompt_library.py  rally.py  rally_auth.py  rally_reader.py  reranker.py  run_hints.py  secrets.py  session_context.py  vertex_models.py  workspace_storage.py
src/tools/: chunker.py  cloud_run.py  diagram.py  diagram_components.py  diagram_sequence.py  embeddings.py  evidence_synthesis.py  (+10 more)
tests/: test_api.py  test_chunker.py  test_cli.py  test_codegen_stub.py  test_diagram.py  test_docs_and_run.py  test_embeddings.py  test_evidence_tools.py  test_hierarchical_and_compress.py  test_index_empty_chunks.py  test_indexer.py  test_kg.py  test_orchestrator.py  test_policy.py  test_probe_planner.py  test_rag_answerer.py  test_rally.py  test_rally_extender.py  test_rally_integration.py  test_rally_planner.py  test_rally_reader.py  test_repo_ingestor.py  test_repo_load.py  test_repofacts_and_diagram.py  test_reranker.py  test_retrieval.py  test_sizer.py  test_storage.py  test_summarize_repo_tool.py  test_task_decomposer.py  test_vvs_path.py  test_workspace_storage.py
ui/: next.config.js  package-lock.json  package.json
(+40 files in other folders)
